# recipe-converter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  1  Dockerfile  LICENSE  MANIFEST.in  Procfile  Procfile.windows  README.md  Recipe Converter PoC.ipynb  app.py  flask-hello-world.py  fly.toml  gram-conversions.csv  pyproject.toml  recipe-converter.py  recipeConverter.py  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: build-and-deploy.yml  build.yml  deploy-only.yml  deploy.yml  for-debug.yml  on-push.yml  pythonapp.yml
.ipynb_checkpoints/: Recipe Converter PoC-checkpoint.ipynb  Recipe Converter-checkpoint.ipynb
app/: app.py
app/static/css/: main.css  toast.css
app/static/js/: main.js  toast.js
app/templates/: form.html
docs/: README.md  conf.py  index.rst  recipeconverter.rst  requirements.txt
recipeconverter/: __init__.py  gram-conversions.csv  main.py  recipeconverter.py  utils.py
recipeconverter/drivers/: sample_driver.py
recipeconverter/utils/: parser.py  sample_util.py
static/css/: main.css
templates/: form.html
tests/: test_parsing.py  test_sample.py  test_utils.py
