[tool.poetry]
name = "recipe-converter"
version = "0.1.0"
description = ""
authors = ["Nam Tonthat <n.nam.tonthat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.15"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
recipe-scrapers = "^14.26.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
Sphinx = "^5.3.0"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^1.0.0"
pytest = "^7.2.0"
pre-commit = "^2.21.0"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"
pep8-naming = "^0.13.3"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
